--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
         #ideas {
             margin-top: 20px;
         }
+        .idea {
+        margin-bottom: 10px;
+        line-height: 1.4;
+    }
+    .idea-number {
+        font-weight: bold;
+        margin-right: 5px;
+    }
         #refreshButton {
             display: none;
         }
@@ -68,11 +76,17 @@
         }
 
         function displayIdeas(ideas) {
-            ideasDiv.innerHTML = '<h2>Entrepreneurial Ideas:</h2><ul>' +
-                ideas.map(idea => `<li>${idea}</li>`).join('') +
-                '</ul>';
-            refreshButton.style.display = 'block';
-        }
+    const cleanIdeas = ideas.map((idea, index) => {
+        // Remove numbers, asterisks, and extra spaces
+        return idea.replace(/^\d+\.\s*\*+|\*+/g, '').trim();
+    });
+
+    ideasDiv.innerHTML = '<h2>Entrepreneurial Ideas:</h2>' +
+        cleanIdeas.map((idea, index) => 
+            `<div class="idea"><span class="idea-number">${index + 1}.</span> ${idea}</div>`
+        ).join('');
+    refreshButton.style.display = 'block';
+}
 
         async function handleIdeaGeneration(e) {
             if (e) e.preventDefault();
