--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     </style>
 </head>
 <body>
-    <h1>Kid's Entrepreneurial Ideas Generator</h1>
+    <h1>Quiet Canyon Kids</h1>
+    <h2>Entrepreneurial Event Ideas Generator</h2>
     <form id="ideaForm">
         <label for="age">Child's Age:</label>
         <input type="number" id="age" name="age" required min="1" max="18">
